--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 # Site settings
 title: LI Shasha (Lisa)
 name: LI Shasha
-subtitle: Bocconi
-email: shasha.li@unibocconi.it
+subtitle: IWH&Magdeburg
+email: shasha.li@iwh-halle.de
 description: >
-  PhD in Economics and Finance
+  Welcome!
 baseurl: ""
 url: "https://shasha-li.github.io/"
 github_username:  shasha-li
