--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 
 # Site settings
-title: LI Shasha (Lisa)
-name: LI Shasha
-subtitle: IWH&Magdeburg
+title: LISA
+name: LISA
+subtitle: LISA
 email: shasha.li@iwh-halle.de
 description: >
   Welcome!
